--- a/TinderSwipeCards.xcodeproj/xcshareddata/xcschemes/TinderSwipeCards.xcscheme
+++ b/TinderSwipeCards.xcodeproj/xcshareddata/xcschemes/TinderSwipeCards.xcscheme
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       codeCoverageEnabled = "YES"
       onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;xcrun simctl uninstall booted tatabim.TinderSwipeCards&#10;">
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <CodeCoverageTargets>
          <BuildableReference
             BuildableIdentifier = "primary"
